# Fitness

./: .gitignore  CMakeLists.txt  README.md
src/: fitness.h  fitnesscalculation.cc  fitnesscalculation.h  main.cc
src/fitness/: basefitness.h  bgfitness.cc  bgfitness.h  none.cc  none.h
